k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cgi-server
  labels:
    name: cgi-server
