k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mopa-laser-rasterizer
  namespace: default
  labels:
    app: mopa-laser-rasterizer
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mopa-laser-rasterizer
  template:
    metadata:
      labels:
        app: mopa-laser-rasterizer
    spec:
      # --- NEW: This blocks the Flask container until Redis is fully running ---
      containers:
      - name: mopa-laser-rasterizer
        image: mopa-laser-rasterizer:local
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "2048Mi"
            cpu: "500m"
        volumeMounts:
        - name: static
          mountPath: /app/static
          readOnly: true
        - name: templates
          mountPath: /app/templates
          readOnly: true
        - name: uploads
          mountPath: /app/uploads
          readOnly: false
      volumes:
      - name: static
        hostPath:
          path: /home/ubuntu/mopa-laser-rasterizer/static
          type: Directory
      - name: templates
        hostPath:
          path: /home/ubuntu/mopa-laser-rasterizer/templates
          type: Directory
      - name: uploads
        hostPath:
          path: /home/ubuntu/mopa-laser-rasterizer/uploads
          type: DirectoryOrCreate
