k8s/redis.statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-state-set
  namespace: default
  labels:
    app: redis-state
spec:
  serviceName: "redis-service"
  replicas: 1
  selector:
    matchLabels:
      app: redis-state
  template:
    metadata:
      labels:
        app: redis-state
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        imagePullPolicy: IfNotPresent
        # --appendonly yes forces Redis to write every state change to disk instantly
        args: ["redis-server", "--appendonly", "yes"]
        ports:
        - containerPort: 6379
          name: redis
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - name: redis-data
          mountPath: /data
  # This block requests cluster storage dynamically for your Redis state
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
