k8s/redis.fargate-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-fargate
  namespace: default
  labels:
    app: redis-state
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    nodePort: 30379
    protocol: TCP
  selector:
    app: redis-state
