k8s/service.aws.yml
apiVersion: v1
kind: Service
metadata:
  name: mopa-laser-rasterizer
  namespace: default
  labels:
    app: mopa-laser-rasterizer
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
    nodePort: 30080
    protocol: TCP
  selector:
    app: mopa-laser-rasterizer
