k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cgi-server
  namespace: default
  labels:
    app: cgi-server
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: cgi-server
